# shrs_reedline

./: .gitignore  Cargo.toml  README.md
examples/: basic.rs
src/: lib.rs
