[package]
name = "shrs_reedline"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["MrPicklePinosaur"]
description = "shrs adapter layer for reedline"
categories = ["command-line-interface", "command-line-utilities", "development-tools"]
keywords = ["shrs", "shell", "posix", "unix"]
readme = "README.md"
repository = "https://github.com/MrPicklePinosaur/shrs_reedline"

[features]

[dependencies]
shrs = { git = "https://github.com/MrPicklePinosaur/shrs" }
reedline = { version = "0.20" }
